k8s/organizr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: organizr 
spec:
  replicas: 1
  serviceName: organizr
  selector:
    matchLabels:
      app: organizr
  template:
    metadata:
      name: organizr
      labels:
        app: organizr
    spec:
      containers:
      - name: organizr
        image: ghcr.io/organizr/organizr:version-f6d984d2
        imagePullPolicy: Always
        ports:
          - name: organizr
            containerPort: 80 
        volumeMounts:
        - mountPath: "/config"
          name: organizr-config
      volumes:
      - name: organizr-config
        iscsi:
          targetPortal: 10.10.11.5:3260
          iqn: iqn.2000-01.com.synology:Library.organizr-config
          lun: 1
          fsType: ext4
          readOnly: false
