k8s/organizr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: organizr
spec:
  selector:
    app: organizr
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80
